# anomaly-detector

./: .gitignore  MANIFEST.in  README.md  anomaly-detector-sample-code.ipynb  build.py  owners.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: blank.yml  build.yml  cd.yml  ci.yml  publish_to_test_pypi.yml  test.yml  test_pipeline.yml  tests.yml
.script/: Dockerfile  install_poetry.sh
anomaly-detector/: build.py  pyproject.toml
anomaly-detector/anomaly_detector/: __init__.py  base.py
anomaly-detector/anomaly_detector/common/: constants.py  data_processor.py  error_code.py  exception.py  time_util.py
anomaly-detector/anomaly_detector/multivariate/: contract.py  dataset.py  model.py  module.py  util.py
anomaly-detector/anomaly_detector/telemetry/: __init__.py  appinsights.py  console.py  fluentd_wrapper.py  geneva.py  mon3.py  statsd_wrapper.py  telemetry_base.py  telemetry_factory.py
anomaly-detector/anomaly_detector/telemetry/mds/: mds.configuration.xml
anomaly-detector/anomaly_detector/telemetry/mon3lib/: logger.py  meter.py  sender.py
anomaly-detector/anomaly_detector/univariate/: MicrosoftConfidential.txt  MicrosoftConfidentialDirectories.txt  __init__.py  _anomaly_kernel_cython.c  _anomaly_kernel_cython.cp311-win_amd64.pyd  _anomaly_kernel_cython.pyx  univariate_anomaly_detection.py
anomaly-detector/anomaly_detector/univariate/detectors/: __init__.py  detector.py  dynamic_filter.py  esd_filter.py  spectral_residual.py  z_score.py
anomaly-detector/anomaly_detector/univariate/filling_up/: __init__.py  fill_up.py  fill_up_methods.py
anomaly-detector/anomaly_detector/univariate/handlers/: __init__.py  anomaly_detect_request.py  anomaly_detect_response.py  service_handler.py  timeseries_anomaly_handler.py  timeseries_period_handler.py
anomaly-detector/anomaly_detector/univariate/handlers/parser/: request_parser.py  request_parser_v1.py
anomaly-detector/anomaly_detector/univariate/model/: __init__.py  detect.py  detect_model.py  dynamic_threshold.py  hbos_detection.py  seasonal_series.py  series_compete_processor.py  spectral_residual_model.py
anomaly-detector/anomaly_detector/univariate/period/: __init__.py  period_detect.py  simple.py  spectrum.py
anomaly-detector/anomaly_detector/univariate/resource/: error_message.py  error_message_v1.py
anomaly-detector/anomaly_detector/univariate/util/: __init__.py  boundary_utils.py  critical_table.txt  date_utils.py  enum.py  exceptions.py  fields.py  helpers.py  r_stl.py  refine.py  stl_helpers.py
anomaly-detector/tests/: e2e_test.py  e2e_test_1.py  e2e_test_2.py  e2e_test_mvad.py  e2e_test_uvad.py  test_demo.py  test_demo_setup.py  uvad_test.py
anomaly-detector/tests/cases/: function_module_test.test_entire_need_fill_request_0.json  function_module_test.test_entire_need_fill_request_2.json  function_module_test.test_entire_need_fill_request_5.json  function_module_test.test_entire_need_fill_request_6.json  function_module_test.test_entire_need_fill_request_7.json  function_module_test.test_entire_need_fill_request_9.json  function_module_test.test_entire_request_0.json  function_module_test.test_entire_request_1.json  function_module_test.test_entire_request_10.json  function_module_test.test_entire_request_11.json  function_module_test.test_entire_request_5.json  function_module_test.test_entire_request_6.json  function_module_test.test_entire_request_7.json  function_module_test.test_entire_request_8.json  function_module_test.test_entire_request_9.json  function_module_test.test_extreme_data_2.json  function_module_test.test_last_request_0.json  function_module_test.test_last_request_1.json  function_module_test.test_last_request_10.json  function_module_test.test_last_request_11.json  function_module_test.test_last_request_12.json  function_module_test.test_last_request_13.json  function_module_test.test_last_request_14.json  function_module_test.test_last_request_15.json  function_module_test.test_last_request_16.json  function_module_test.test_last_request_17.json  function_module_test.test_last_request_18.json  function_module_test.test_last_request_19.json  function_module_test.test_last_request_2.json  function_module_test.test_last_request_23.json  function_module_test.test_last_request_24.json  function_module_test.test_last_request_3.json  function_module_test.test_last_request_4.json  function_module_test.test_last_request_5.json  function_module_test.test_last_request_6.json  function_module_test.test_last_request_7.json  function_module_test.test_last_request_8.json  function_module_test.test_last_request_9.json  json_changepoint_cases.a_0.json  json_changepoint_cases.b_0.json  (+149 more)
anomaly-detector/tests/testCase/testCase_10000_20/: config.yaml  inference_data_smaller_than_window.csv  invalid_timestamp.csv  invalid_value.csv
anomaly-detector/tests/testCase/testCase_1000_200/: normal_data.csv
anomaly_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/anomaly_detector/: __init__.py
tests/: e2e_test_mvad.py  e2e_test_uvad.py  test_demo.py  uvad_test.py
tests/cases/: function_module_test.test_entire_need_fill_request_0.json  function_module_test.test_entire_need_fill_request_1.json  function_module_test.test_entire_need_fill_request_3.json  function_module_test.test_entire_need_fill_request_4.json  function_module_test.test_entire_need_fill_request_8.json  function_module_test.test_entire_request_1.json  function_module_test.test_entire_request_12.json  function_module_test.test_entire_request_2.json  function_module_test.test_entire_request_3.json  function_module_test.test_entire_request_4.json  function_module_test.test_extreme_data_1.json  function_module_test.test_extreme_data_3.json  (+41 more)
(+31 files in other folders)
