[tool.poetry]
name = "time-series-anomaly-detector"
version = "0.2.2"
description = "Microsoft Anomaly Detector"
authors = ["Anomaly Detector <anomaly_detector@microsoft.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "anomaly_detector"}]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.0"
pandas = "^2.2"
seasonal = "^0.3.1"
scipy = "^1.9.3"
pytz = "^2020.1"
Cython = "^3.0.8"
rstl = "^0.1.3"
python_dateutil = "^2.8.2"
psutil = "^5.9.2"
statsmodels = "^0.14.1"
scikit-learn = "^1.3.2"
arch = "^6.3.0"
torch = "^1.13.1"
tqdm = "^4.66.1"
mlflow = "^2"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=62.6.0", "Cython>=0.29.30", "numpy"]
build-backend = "setuptools.build_meta"
