[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-anomaly-detector"
version = "0.2.4"
description = "Time Series Anomaly Detector"
readme = "README.md"
requires-python = ">=3.9.0"
license = { file = "LICENSE" }
keywords = ["machine learning", "time series", "anomaly detection"]
authors = [
    { name = "Microsoft Corporation", email = "ad-oss@microsoft.com" }
]
maintainers = [
    { name = "Microsoft Corporation", email = "ad-oss@microsoft.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.23.5",
    "pandas>=1.3.5",
    "seasonal>=0.3.1",
    "scipy>=1.9.3",
    "pytz>=2018.9",
    "rstl>=0.1.3",
    "psutil>=5.9.2",
    "statsmodels>=0.14.1",
    "scikit-learn>=1.3.2",
    "arch>=6.3.0",
    "torch>=1.13.1",
    "tqdm>=4.66.1",
    "mlflow>=2",
    "pytest>=7.4.4",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/anomaly-detector"

[tool.setuptools.packages.find]
where = ["src"]