[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy==1.26.4",
    "cython==3.0.10"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-anomaly-detector"
version = "0.3.1"
description = "Time Series Anomaly Detector"
readme = "README.md"
requires-python = ">=3.10.0"
license = { file = "LICENSE" }
keywords = ["machine learning", "time series", "anomaly detection"]
authors = [
    { name = "Microsoft Corporation", email = "ad-oss@microsoft.com" }
]
maintainers = [
    { name = "Microsoft Corporation", email = "ad-oss@microsoft.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "numpy<2, >=1.23.5",
    "pandas<2, >=1.3.5",
    "seasonal>=0.3.1",
    "scipy<1.13.0, >=1.9.3",
    "pytz>=2018.9",
    "rstl>=0.1.3",
    "psutil>=5.9.2",
    "statsmodels>=0.14.1",
    "scikit-learn>=1.3.2",
    "arch>=6.3.0",
    "torch>=1.13.1",
    "tqdm>=4.66.1",
    "mlflow>=2",
    "pytest>=7.4.4",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/anomaly-detector"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
skip = ["pp*", "*-musllinux*"]
test-command = [
    "python {project}/tests/uvad_test.py",
    "python {project}/tests/test_demo.py"
]