[tool.poetry]
name = "anomaly-detector"
version = "0.1.0"
description = ""
authors = ["juaduan <juanyong.duan@microsoft.com>"]
readme = "README.md"
packages = [{include = "anomaly_detector"}]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
numpy = "^1.25.2"
pandas = "^1.3.5"
tqdm = "^4.66.1"
mlflow = "^2.9.2"
seasonal = "^0.3.1"
scipy = "^1.9.3"
pytz = "^2018.9"
Cython = "^3.0.8"
rpy2 = "^3.5.1"
python_dateutil = "^2.7.5"
psutil = "^5.9.2"
statsmodels = "^0.13.5"
scikit-learn = "^1.3.2"
arch = "^5.3.1"
pybind11 = "^2.11.1"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=62.6.0", "Cython>=0.29.30"]
build-backend = "poetry.core.masonry.api"
