[tool.poetry]
name = "anomaly-detector"
version = "0.1.1"
description = "Microsoft Anomaly Detector"
authors = ["Anomaly Detector <anomaly_detector@microsoft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
tqdm = "^4.66.1"
mlflow = "^2"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
